# waterbutler

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .mailmap  .travis.yml  CHANGELOG  CONTRIBUTING.md  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  compat.py  dev-requirements.txt  doc-requirements.txt  docker-compose.yml  environment.yml  patch.py  plugin.py  pyproject.toml  qodana.yaml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tasks.py
.cache/v/cache/: lastfailed
.github/workflows/: test-build.yml
docs/: adding-providers.rst  api.rst  api_reference.rst  changelog.rst  code.rst  conf.py  contributing.rst  gettingstarted.rst  index.rst  license.rst  modules.rst  overview.rst  provider.dmptool.rst  provider.dryad.metadata.rst  provider.dryad.path.rst  provider.dryad.rst  provider.evernote.rst  provider.gitlab.rst  provider.googlecloud.metadata.rst  provider.googlecloud.rst  provider.googlecloud.utils.rst  provider.onedrive.rst  provider.osfstorage.metadata.rst  provider.osfstorage.rst  provider.owncloud.rst  provider.sharelatex.rst  providers.rst  rate-limiting.rst  releases.rst  runningtests.rst  settingup.rst  tasks.rst  testing.rst  tests.rst  waterbutler.core.rst  waterbutler.core.streams.rst  waterbutler.providers.rst  waterbutler.rst  waterbutler.server.rst  waterbutler.tasks.rst
docs/_build/html/: provider.googlecloud.html  provider.googlecloud.metadata.html  provider.googlecloud.utils.html
scripts/tests/: test_run_all_combinations_cross_provider_moves.py
tests/: conftest.py  utils.py
tests/auth/osf/: test_handler.py
tests/core/: fixtures.py  test_exceptions.py  test_metadata.py  test_path.py  test_provider.py  test_remote_logging.py  test_utils.py
tests/core/streams/: fixtures.py  test_base64encodestream.py  test_bytestream.py  test_cutoffstream.py  test_file.py  test_formdatastream.py  test_http.py  test_jsonstream.py  test_multistream.py  test_stringstream.py  test_zip.py
tests/postman/collections/: copy_files.json  copy_folders.json  crud_cases.json  move_files.json  move_folders.json
tests/postman/environments/: copy_file_sample.json
tests/providers/azureblobstorage/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/bitbucket/: fixtures.py  metadata_fixtures.py  provider_fixtures.py  test_metadata.py  test_path.py  test_provider.py
tests/providers/box/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/cloudfiles/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/dataverse/: fixtures.py  test_metadata.py  test_provider.py  test_utils.py
tests/providers/dropbox/: fixtures.py  test_exceptions.py  test_metadata.py  test_provider.py
tests/providers/dropboxbusiness/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/dryad/: fixtures.py  test_metadata.py  test_path.py  test_provider.py
tests/providers/evernote/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/fedora/: it_provider.py  test_provider.py
tests/providers/figshare/: fixtures.py  test_metadata.py  test_path.py  test_provider.py
tests/providers/filesystem/: test_metadata.py  test_provider.py
tests/providers/github/: fixtures.py  test_exceptions.py  test_metadata.py  test_path.py  test_provider.py
tests/providers/gitlab/: fixtures.py  test_provider.py
tests/providers/googlecloud/: fixtures.py  test_metadata.py  test_provider.py  test_utils.py
tests/providers/googlecloudstorage/: fixtures.py  test_provider.py  test_utils.py
tests/providers/googledrive/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/iqbrims/: test_metadata.py  test_provider.py
tests/providers/nextcloud/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/nextcloudinstitutions/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/ociinstitutions/: test_provider.py
tests/providers/onedrive/: conftest.py  fixtures.py  test_metadata.py  test_path.py  test_provider.py
tests/providers/osfstorage/: fixtures.py  test_exceptions.py  test_handler.py  test_metadata.py  test_provider.py  test_tasks.py
tests/providers/owncloud/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/rushfiles/: fixtures.py  test_metadata.py  test_provider.py
tests/providers/s3/: fixtures.py  test.py  test_metadata.py  test_provider.py
tests/providers/s3compat/: test_provider.py
tests/providers/s3compatb3/: test_provider.py
tests/providers/s3compatinstitutions/: test_provider.py
tests/providers/sharelatex/: fixtures.py  test_provider.py
tests/providers/swift/: test_provider.py
tests/providers/weko/: test_client.py  test_provider.py
tests/server/: test_sanitize.py  test_utils.py
tests/server/handlers/: test_copy.py  test_crud.py  test_move.py  test_revisions.py
tests/tasks/: conftest.py  test_copy.py  test_move.py  test_serialization.py
waterbutler/: __init__.py  constants.py  settings.py  sizes.py  version.py
waterbutler/core/: __init__.py  analytics.py  auth.py  exceptions.py  log_payload.py  logging.py  metadata.py  metrics.py  path.py  provider.py  remote_logging.py  signing.py  utils.py
waterbutler/encryption/: __init__.py  blockcipher.py  settings.py
waterbutler/server/: app.py  auth.py  handlers.py  sanitize.py  settings.py  utils.py
waterbutler/tasks/: app.py  copy.py  core.py  exceptions.py  move.py  serialization.py  settings.py
(+352 files in other folders)
