[tool.poetry]
name = "waterbutler"
version = "25.0.0"  # TODO: get version from waterbutler/version.py
description = "WaterButler Storage Server"
authors = ["Center for Open Science <contact@cos.io>"]
readme = "README.md"
# requires-python = ">=3.13,<3.14"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.13"
aiobotocore = "2.15.2"
aiocontextvars = "0.2.2"
aiohttp = "3.10.5"
boto3 = "1.35.16"
celery = "5.5.0"
celery-amqp-backend = "1.2.0"
certifi = "2025.1.31"
cryptography = "44.0.2"
furl = "2.0.0"
google-auth = "2.38.0"
humanfriendly = "10.0"
invoke = "2.2.0"
multidict = ">=6.0.0"
newrelic = "10.8.1"
oauthlib = "3.2.2"
pyjwe = "1.0.0"
pyjwt = "2.10.1"
python-dateutil = "2.9.0"
celery-amqp-backend = "^1.2.0"
pytz = "2025.1"
sentry-sdk = "2.22.0"
redis = "5.2.1"
setuptools = "^80.1.0"
stevedore = "5.4.1"
tornado = "6.4.2"
xmltodict = "0.14.2"
yarl = "1.17.0"

# "dev" dependency group relevant only for local dev:
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
colorlog = "6.9.0"
coveralls = "3.3.1"
flake8 = "7.1.2"
ipdb = "0.13.13"
ipython = "8.32.0"
mypy = "1.15.0"
mccabe = "0.7.0"
pycodestyle = "2.12.1"
pydevd = "3.3.0"
pyflakes = "3.2.0"
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-cov = "4.1.0"
aiohttpretty = {git = "https://github.com/CenterForOpenScience/aiohttpretty.git", branch = "release/ahp-25.0.0"}

# "docs" dependency group relevant only for building docs:
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = ">=8.2.3"
sphinx-autobuild = ">=2024.10.3"
sphinx-rtd-theme = ">=3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
